vanilla redux todo

--- a/vanilla-redux/public/index.html
+++ b/vanilla-redux/public/index.html
@@ -17,5 +17,13 @@
     <button id="minus" type="button">-</button>
     <button id="plus" type="button">+</button>
     <span>0</span>
+
+    <form>
+      <input type="text" />
+      <button type="submit">작성</button>
+    </form>
+    <ul>
+
+    </ul>
   </body>
 </html>
