vanilla to react

--- a/vanilla-redux/public/index.html
+++ b/vanilla-redux/public/index.html
@@ -14,6 +14,8 @@
     <title>Vanilla Redux</title>
   </head>
   <body>
+    <div id="root"></div>
+    <!--
     <button id="minus" type="button">-</button>
     <button id="plus" type="button">+</button>
     <span>0</span>
@@ -25,5 +27,6 @@
     <ul>
 
     </ul>
+    -->
   </body>
 </html>
