vue CLI webpack add

--- a/vuejs/index.html
+++ b/vuejs/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
+<!DOCTYPE>
+<html>
 <head>
     <title>Vue3 Study</title>
 </head>
 <body>
-    <div>
-        TEST
-    </div>
-    <div id="root">
+    <div id="app">
 
     </div>
+    <script src="./dist/tk.index.js"></script>
+    <script src="./dist/vendors.js"></script>
 <script>
-
+  // test();
 </script>
 </body>
 </html>
