--- a/vuejs/src/jsp/test.html
+++ b/vuejs/src/jsp/test.html
@@ -6,8 +6,8 @@
 <body>
 <div id="app">
 </div>
-<script src="./dist/tk.index.js"></script>
-<script src="./dist/vendors.js"></script>
+<script src="../../dist/tk.reservation.waiting.js"></script>
+<script src="../../dist/vendors.js"></script>
 <script>
   // test();
 </script>
