fix file directory structure

--- a/vuejs/src/jsp/test.html
+++ b/vuejs/src/jsp/test.html
@@ -9,6 +9,13 @@
 <script src="../../dist/tk.reservation.waiting.js"></script>
 <script src="../../dist/vendors.js"></script>
 <script>
+  initData({
+    // WaitingScheduleReserveInfo: <spring:eval expression="T(JsonUtils2).toJson(WaitingScheduleReserveInfo)"/>;,
+    WaitingScheduleReserveInfo: {
+      test: 'value',
+      typescript: true,
+	},
+  })
   // test();
 </script>
 </body>
