main Vue Store add

--- a/vuejs/src/jsp/main.html
+++ b/vuejs/src/jsp/main.html
@@ -10,7 +10,13 @@
     <script src="../../dist/tk.main.js"></script>
     <script src="../../dist/vendors.js"></script>
 <script>
-  // test();
+	initData({
+		// WaitingScheduleReserveInfo: <spring:eval expression="T(JsonUtils2).toJson(WaitingScheduleReserveInfo)"/>;,
+		main: {
+			test: 'main',
+			typescript: true,
+		},
+	})
 </script>
 </body>
 </html>
