initData function add & pcweb test file add

--- a/react-mpa/src/jsp/main.html
+++ b/react-mpa/src/jsp/main.html
@@ -10,6 +10,9 @@
 <script src="../../dist/tk.main.js"></script>
 <script src="../../dist/vendors.js"></script>
 <script>
+    initData({
+      test: 123,
+    })
 </script>
 </body>
 </html>
