--- a/react-mpa/src/jsp/main.html
+++ b/react-mpa/src/jsp/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE>
 <html>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <head>
     <title>Vue3 Study</title>
 </head>
