html title change

--- a/react-mpa/src/jsp/main.html
+++ b/react-mpa/src/jsp/main.html
@@ -2,18 +2,18 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <head>
-    <title>Vue3 Study</title>
+    <title>React MPA Study</title>
 </head>
 <body>
 <div id="root">
-
 </div>
 <script src="../../dist/tk.main.js"></script>
 <script src="../../dist/vendors.js"></script>
 <script>
     initData({
       test: 123,
-      channel: 'PC'
+      channel: 'PC',
+      // channel: 'MOBILE',
     })
 </script>
 </body>
